kubernetes/mysql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
#            - name: mysql-storage
#              mountPath: /var/lib/mysql
            - name: init-script-volume
              mountPath: /docker-entrypoint-initdb.d
      volumes:
#        - name: mysql-storage
#          persistentVolumeClaim:
#            claimName: mysql-pvc
        - name: init-script-volume
          configMap:
            name: mysql-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
#      nodePort: 30004
