kubernetes/shopping-demo-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-demo-inventory
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopping-demo-inventory
  template:
    metadata:
      labels:
        app: shopping-demo-inventory
    spec:
      containers:
        - name: shopping-demo-inventory
          image: adityamaskar1/shopping-demo-inventory:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-demo-inventory-service
spec:
  selector:
    app: shopping-demo-inventory
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 32000
  type: ClusterIP
