kubernetes/shopping-demo-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-demo-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-demo-payment
  template:
    metadata:
      labels:
        app: shopping-demo-payment
    spec:
      containers:
        - name: shopping-demo-payment
          image: adityamaskar1/shopping-demo-payment:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-demo-payment-service
spec:
  selector:
    app: shopping-demo-payment
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8080
#      nodePort: 32002
  type: ClusterIP
