kubernetes/shopping-demo-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-d-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-d-ui
  template:
    metadata:
      labels:
        app: shopping-d-ui
    spec:
      containers:
        - name: shopping-d-ui
          image: adityamaskar1/shopping-demo-react-ts-ui:1.0
          imagePullPolicy: Always
#          env:
#            - name: BASE_URL
#              valueFrom:
#                configMapKeyRef:
#                  name: shopping-config
#                  key: BASE_URL
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-d-ui-service
spec:
  selector:
    app: shopping-d-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32002
  type: LoadBalancer
