kubernetes/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr
    #annotations:
  #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  #defaultBackend:
  #  service:
  #    name: usermgmt-webapp-clusterip-service
  #    port:
  #      number: 80
  rules:
    - http:
        paths:
          - path: /inventory
            pathType: Prefix
            backend:
              service:
                name: shopping-demo-inventory-service
                port:
                  number: 8080
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: shopping-demo-order-service
                port:
                  number: 8081
          - path: /customer
            pathType: Prefix
            backend:
              service:
                name: shopping-demo-payment-service
                port:
                  number: 8082
